# hackerrank-solutions

./: CMakeLists.txt  Makefile  README.md  configure
.reuse/: dep5
algorithms/: README.md
algorithms/bit-manipulation/: counter-game.cpp  flipping-bits.cpp  lonely-integer.cpp  sum-vs-xor.cpp
algorithms/constructive/: flipping-matrix.cpp  new-year-chaos.cpp
algorithms/debugging/: prime-dates.diff  xor-strings.diff  zig-zag-sequence.diff
algorithms/dynamic-programming/: lego-blocks.cpp
algorithms/game-theory/: tower-breakers.cpp
algorithms/graph-theory/: bfs-shortest-reach.cpp
algorithms/greedy/: grid-challenge.cpp  max-min.cpp  permuting-two-arrays.cpp
algorithms/implementation/: drawing-book.cpp  sales-by-match.cpp  subarray-division.cpp
algorithms/recursion/: recursive-digit-sum.cpp
algorithms/search/: pairs.cpp  sherlock-and-array.cpp
algorithms/sorting/: counting-sort-1.cpp  find-median.cpp
algorithms/strings/: caesar-cipher.cpp  palindrome-index.cpp  pangrams.cpp
algorithms/warm-up/: diagonal-difference.cpp  mini-max-sum.cpp  plus-minus.cpp  time-conversion.cpp
data-structures/: README.md
data-structures/arrays/: dynamic-array.cpp  sparse-arrays.cpp
data-structures/heap/: jesse-and-cookies.cpp
data-structures/linked-lists/: merge-two-linked-lists.cpp
data-structures/queues/: queue-using-two-stacks.cpp  truck-tour.cpp
data-structures/stacks/: balanced-brackets.cpp  simple-text-editor.cpp
data-structures/trees/: binary-tree.hpp  huffman-tree.hpp  tree-huffman-decoding.cpp  tree-preorder-traversal.cpp
data-structures/trie/: no-prefix-set.cpp
preparation-kits/1-month/: README.md
preparation-kits/1-month/week-1/: diagonal-difference.cpp  flipping-bits.cpp  lonely-integer.cpp  mini-max-sum.cpp  pangrams.cpp  permuting-two-arrays.cpp  plus-minus.cpp  sparse-arrays.cpp  subarray-division.cpp  time-conversion.cpp  xor-strings.diff
preparation-kits/1-month/week-2/: counter-game.cpp  drawing-book.cpp  dynamic-array.cpp  max-min.cpp  palindrome-index.cpp  prime-dates.diff  recursive-digit-sum.cpp  sales-by-match.cpp  sherlock-and-array.cpp  sum-vs-xor.cpp  tower-breakers.cpp
preparation-kits/1-week/: README.md
preparation-kits/1-week/day-1/: find-median.cpp
(+20 files in other folders)
